re PR middle-end/15345 ([non-unit-at-a-time] unreferenced nested inline functions not optimized away)

PR middle-end/15345
	PR c/16450
	* toplev.c (rest_of_handle_inlining): Set DECL_DEFER_OUTPUT on C
	nested functions as well.
	* tree-optimize.c (tree_rest_of_compilation): Don't clear decl rtls
	for deferred nested inlines.

	* gcc.dg/torture/nested-fn-1.c: New test.

Co-Authored-By: Jan Hubicka <jh@suse.cz>

From-SVN: r84998